--- a/settings.ini
+++ b/settings.ini
@@ -1,4 +1,3 @@
 [settings]
-; code_theme = default
 code_theme = github-dark
-db_file = /home/jeff/.local/share/sc/test.db
+db_file = /home/jeff/.local/share/sc/notesdb.sqlite3
